--- a/templates/Homepage.html
+++ b/templates/Homepage.html
@@ -34,7 +34,8 @@
       </nav>
       <div>
         <h1 style="text-align: center; margin-top: 75px; color:black; background-color:yellowgreen">This is a Homepage</h1>
-        <p style="margin-left: 20px; margin-top: 50px;"><i>In this website i have done the <b>CRUD Operations</b> and <b>QR Code</b> generation</i></p>
+        <p style="margin-left: 20px; margin-top: 50px;"><i>In this website i have done the <b>CRUD Operations</b> and <b>QR Code</b> generation and converting the data to <b>
+          Excel Sheet</b></i></p>
       </div>
 </body>
 </html>
