--- a/templates/index.html
+++ b/templates/index.html
@@ -267,26 +267,10 @@ $(document).ready(function(){
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="crud">CRUD</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="qrgen">QR Code <span class="sr-only">(current)</span></a>
-            </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li> -->
-          </ul>
-          <!-- <span class="navbar-text">
-            Navbar text with an inline element
-          </span> -->
-        </div>
+		<a class="navbar-brand" href="/">HOME</a>
+      	<a class="navbar-brand" href="crud">CRUD</a>
+      	<a class="navbar-brand" href="qrgen">QR Code</a>
+		<a class="navbar-brand" href="captcha">Captcha</a>
       </nav>
 
 
@@ -307,6 +291,7 @@ $(document).ready(function(){
 			<table class="table table-striped table-hover" id="tbl_exporttable_to_xls">
 				<thead>
 					<tr>
+						<th>profile</th>
 						<th>Name</th>
 						<th>Email</th>
 						<th>Address</th>
@@ -317,6 +302,7 @@ $(document).ready(function(){
 				<tbody>
 					{% for i in emp %}
 					<tr>
+						<td><img style="height: 100px; width: 100px;" src="{{i.profile.url}}" alt="ny be"></td>
 						<td>{{i.Name}}</td>
 						<td>{{i.Email}}</td>
 						<td>{{i.Address}}</td>
@@ -339,13 +325,17 @@ $(document).ready(function(){
 <div id="addEmployeeModal" class="modal fade">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<form action="addEmployee" method='POST'>
+			<form action="addEmployee" method='POST' enctype="multipart/form-data">
 				{% csrf_token %}
 				<div class="modal-header">						
 					<h4 class="modal-title">Add Employee</h4>
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				</div>
-				<div class="modal-body">					
+				<div class="modal-body">
+					<div class="form-group">
+						<label>profile</label>
+						<input type="file" class="form-control" required name="profile">
+					</div>					
 					<div class="form-group">
 						<label>Name</label>
 						<input type="text" class="form-control" required name="name">
@@ -377,13 +367,18 @@ $(document).ready(function(){
 <div id="editEmployeeModal-{{forloop.counter}}" class="modal fade">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<form action="editEmployee/{{i.id}}" method="POST">
+			<form action="editEmployee/{{i.id}}" method="POST" enctype="multipart/form-data">
 				{% csrf_token %}
 				<div class="modal-header">						
 					<h4 class="modal-title">Edit Employee</h4>
 					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 				</div>
-				<div class="modal-body">					
+				<div class="modal-body">
+					<div class="form-group">
+						<label>profile</label>
+						<td><img style="height: 100px; width: 100px;" src="{{i.profile.url}}" alt="ny be"></td>
+						<input type="file" class="form-control" name="profile">
+					</div>					
 					<div class="form-group">
 						<label>Name</label>
 						<input type="text" class="form-control" name="name" required value='{{i.Name}}'>
@@ -415,7 +410,7 @@ $(document).ready(function(){
 <div id="deleteEmployeeModal-{{forloop.counter}}" class="modal fade">
 	<div class="modal-dialog">
 		<div class="modal-content">
-			<form action="deleteEmployee/{{i.id}}" method="POST">
+			<form action="deleteEmployee/{{i.id}}" method="POST" enctype="multipart/form-data">
 				{% csrf_token %}
 				<div class="modal-header">						
 					<h4 class="modal-title">Delete Employee</h4>
