--- a/templates/qrcode.html
+++ b/templates/qrcode.html
@@ -8,26 +8,10 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="crud">CRUD</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="qrgen">QR Code <span class="sr-only">(current)</span></a>
-            </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li> -->
-          </ul>
-          <!-- <span class="navbar-text">
-            Navbar text with an inline element
-          </span> -->
-        </div>
+      <a class="navbar-brand" href="/">HOME</a>
+      <a class="navbar-brand" href="crud">CRUD</a>
+      <a class="navbar-brand" href="qrgen">QR Code</a>
+      <a class="navbar-brand" href="captcha">Captcha</a>
       </nav>
     <div style="margin-top: 50px;">
         <form action="qrgen" method="post">
